...
import java.time.format.DateTimeFormatter

/** Object containing test tags for UI testing of the DailyViewScreen. */
object DailyViewScreenTestTags {
  const val TITLE = "dailyViewScreenTitle"
  const val FAVORITE_BUTTON = "dailyViewScreenFavoriteButton"
  const val EDIT_BUTTON = "dailyViewScreenEditButton"
  const val LAZY_COLUMN = "dailyViewScreenLazyColumn"
  const val NO_LOCATIONS = "dailyViewScreenNoLocations"
  const val DAY_NAVIGATOR = "dailyViewScreenDayNavigator"
  const val PREV_DAY_BUTTON = "dailyViewScreenPrevDayButton"
  const val NEXT_DAY_BUTTON = "dailyViewScreenNextDayButton"
  const val CURRENT_DAY_TEXT = "dailyViewScreenCurrentDayText"
...
  const val FULLSCREEN_MAP = "dailyViewScreenFullScreenMap"
  const val FULLSCREEN_EXIT = "dailyViewScreenFullScreenExit"
  const val STEP_CARD = "dailyViewScreenStepCard"
  const val SWIPE_ACTIVITIES_BUTTON = "dailyViewScreenSwipeActivitiesButton"
  const val LIKED_ACTIVITIES_BUTTON = "dailyViewScreenLikedActivitiesButton"

  const val SHARE_BUTTON = "dailyViewScreenShareButton"

  fun getTestTagForRemoveCollaborator(uid: String): String = "removeCollaborator${uid}"
}

/**
 * A data class to refactor the callbacks of the DailViewScreen composable
...
